<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="activity_name">LibUsbActivity</string>
    <string name="initializing">Initializing…</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="start_scardcontrol">Start scardcontrol</string>
    <string name="start_pcscproxy">Start pcsc-proxy</string>
    <string name="pcsc_daemon_permission_label">Smart card access</string>
    <string name="pcsc_daemon_permission_desc">Allows the application to access a smart card.</string>
    <string name="start_lsusb">Start lsusb</string>
    <string name="start_pcscd">Start pcscd</string>
    <string name="stop_pcscd">Stop pcscd</string>
    <string name="stop_pcscproxy">Stop pcsc-proxy</string>
    <string name="attached_name">Attaching SmartCard reader</string>
    <string name="set_device">Set Device</string>
    <string name="service_name">LibUsb Service</string>
    <string name="app_name">PC/SC Lite</string>
    <string name="service_started">LibUsb Started</string>
    <string name="service_label">LibUsb Service</string>
    <string name="stop_service">Stop service</string>
</resources>
