<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Hello World, LibUsbActivity"
    />
<TextView
    android:id="@+id/status"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/initializing"
    />
<Button android:id="@+id/set_device"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/set_device">
    </Button>
<Button android:id="@+id/start_scardcontrol"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/start_scardcontrol">
    </Button>
<Button android:id="@+id/start_pcscproxy"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/start_pcscproxy">
    </Button>
<Button android:id="@+id/stop_pcscproxy"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/stop_pcscproxy">
    </Button>
<Button android:id="@+id/start_lsusb"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/start_lsusb">
    </Button>
    <Button android:id="@+id/start_pcscd"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/start_pcscd">
    </Button>
<Button android:id="@+id/stop_pcscd"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/stop_pcscd">
    </Button>
<Button android:id="@+id/stop_service"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/stop_service">
    </Button>
</LinearLayout>

